chore: added consistent formatting and formatted entire codebase